Update K-Means Clustering On Customer segmenation.ipynb

--- a/K-Means Clustering On Customer segmenation.ipynb
+++ b/K-Means Clustering On Customer segmenation.ipynb
@@ -608,7 +608,7 @@
     "# Hence,we successfully implemented K-Means Clustering Algorithm on Customer Segmentation dataset and visualized the clusters with their centroids.\n",
     "# We also compared Scratch implemenattion with SK learn Kmeans Clustering method and the result was very nearer to each other.\n",
     "# It's all about assigning appropraite amount of clusters and centroid to each clusters.\n",
-    "#Identifying clusters----->Assigning centroid to each clusters----->Updating Centroids by taking means of all data-points within each clusters--->Again updating centroids according to the entry on data-points----->Untill Convergence of centroids within each clusters don't occur,i.e:Centroids should get stabilised and further displacement."
+    "#Identifying clusters----->Assigning centroid to each clusters----->Updating Centroids by taking means of all data-points within each clusters--->Again updating centroids according to the entry on data-points----->Untill Convergence of centroids within each clusters don't occur,i.e:Centroids should get stabilised and no further displacement."
    ]
   }
  ],
